<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstNameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/welcome_text_two"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/first_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:background="@drawable/ic_edit_text_style"
        android:hint="@string/firstname_text"
        android:inputType="textPersonName"
        android:layout_marginTop="150dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn_surname"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/next_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>